@@ -1,5 +1,10 @@
 $Id$
 
+2015-12-14  Douglas Gilbert  <dgilbert@interlog.com>
+
+	scsiprint.cpp: fix compiler warning for is_tape. Clean code around
+	handling of tape drives.
+
 2015-12-14  Christian Franke  <franke@computer.org>
 
 	drivedb.h:
